--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "4.6.0",
+    "react-quill-new": "^3.4.6",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
