--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
@@ -20,6 +21,7 @@
     "react-dom": "18.3.1",
     "react-icons": "4.6.0",
     "react-quill-new": "^3.4.6",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
