--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "json-server": "^0.17.4",
+    "nanoid": "^5.1.5",
     "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
