--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
+    "dompurify": "^3.2.6",
     "json-server": "^0.17.4",
     "nanoid": "^5.1.5",
     "prop-types": "15.8.1",
